--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,12 @@
 			<artifactId>jquery</artifactId>
 			<version>2.1.4</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.7</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
