cnfig send mail properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=Blog
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hienq127@gmail.com
+spring.mail.password=kbsmeutvkyhuowyy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties..mail.smtp.starttls.enable=true
