--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,15 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.7</version>
         </dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.5.0-b01</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
